--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-torch==2.2.1
-torchvision==0.17.1
-numpy==1.26.4
-pandas==2.2.1
-matplotlib==3.8.3
-matplotlib-inline==0.1.6
-scikit-learn==1.4.1.post1
-scipy==1.12.0
+torch
+torchvision
+numpy
+pandas
+matplotlib
+matplotlib-inline
+scikit-learn
+scipy
 colorama
 google-cloud-storage
