reduce UCVGAN parameters

--- a/.env.sample
+++ b/.env.sample
@@ -16,3 +16,6 @@ MLFLOW_TRACKING_URI=http://34.163.119.228:5000
 MLFLOW_EXPERIMENT=sat2plan_
 MLFLOW_MODEL_NAME=sat2plan_
 
+#Distributed Training
+MASTER_ADDR=localhost
+MASTER_PORT=12355
