--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ matplotlib-inline==0.1.6
 scikit-learn==1.4.1.post1
 scipy==1.12.0
 colorama==0.4.6
-google-cloud-storage==2.15.0
+google-cloud-storage
 mlflow==2.11.1
 python-dotenv==1.0.1
 albumentations==1.4.1
