--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-torch==2.1.0
-torchvision==0.16.0
+torch>=2.5.1
+torchvision
+numpy>=1.26.4
+pandas>=2.2.1
+matplotlib>=3.8.3
+matplotlib-inline>=0.1.6
+scikit-learn>=1.4.1.post1
+scipy>=1.12.0
+colorama>=0.4.6
+google-cloud-storage>=2.15.0
+mlflow>=2.11.1
+python-dotenv>=1.0.1
+albumentations>=1.4.1
+streamlit>=1.32.1
+streamlit_image_comparison>=0.0.4
 torch_xla
-numpy==1.26.4
-pandas==2.2.1
-matplotlib==3.8.3
-matplotlib-inline==0.1.6
-scikit-learn==1.4.1.post1
-scipy==1.12.0
-colorama==0.4.6
-google-cloud-storage
-mlflow==2.11.1
-python-dotenv==1.0.1
-albumentations==1.4.1
-streamlit==1.32.1
-streamlit_image_comparison==0.0.4
